# kube-workload-compute-details-api

./: Cargo.toml  README.md
src/: main.rs
